# anthology-ch

./: .gitignore  README.md  build.py  pyproject.toml  validate_xml.py
anthology/anthology/: __init__.py  bibtex.py  cli.py  doi.py  html_generator.py  latex.py  latex_parser.py  metadata.py  paper.py  sitemap_generator.py  utils.py  xml_generator.py
data/: anthology-ch.cls  metadata.json
data/templates/: article.html  main.html  toc.html  volume.html
data/xml/: crossref-vol0001.xml  crossref-vol0002.xml  crossref-vol0003.xml
db/: affiliation.parquet  author.parquet  paper.parquet  volume.parquet
docs/: 404.html  index.html  robots.txt  rss.xml  sitemap.xml
docs/about/: index.html
docs/css/: about.css  article.css  site.css
docs/resources/: combined-filters.lua  make.sh
docs/resources/template-latex/: anthology-ch.cls  paper-fr.tex  paper.tex
docs/resources/template-md/: mla-numeric.csl
docs/volumes/: index.html
docs/volumes/vol0001/: index.html
docs/volumes/vol0002/: index.html
docs/volumes/vol0003/: index.html
resources/template-latex/: paper.tex
schema/: JATS-journalpublishing1-mathml3.xsd  crossref4.4.2.xsd  mathml3.xsd
static/: anthology-ch.cls  metadata.json
templates/: article.html  main.html  toc.html  volume.html
tests/: __init__.py  test_doi.py  test_frozen.py  test_utils.py
volumes/: index.html
volumes/vol0001/introducing-anthology-for-computers-humanities/: .anthology-meta.json
volumes/vol0002/extending-recogito-studio-with-plugins/: index.html  (+2 more)
xml/: crossref-vol0001.xml  crossref-vol0002.xml  crossref-vol0003.xml
(+583 files in other folders)
