[project]
name = "anthology"
version = "1.0.2"
description = "ACH Anthology journal processor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.1.6",
    "pylatexenc>=2.10",
    "pypdf>=6.1.1",
]

[project.scripts]
anthology = "anthology.anthology.cli:main"

[tool.setuptools]
packages = ["anthology.anthology"]

[tool.uv]
package = true
